# derivatives-pricing-app

./: .dockerignore  .env  .gitignore  BS_backup.js  Dockerfile  Dockerfile copy  Expiry.py  LMEvolSurface.py  README.md  TradeClass.py  app.py  azure-pipelines.yml  baseLog.py  calculators.py  calculators_old.py  company_styling.py  data_connections.py  email_utils.py  index.py  int_app.py  known_hosts  overnightRec.py  parts.py  psycopg2-2.9.9-cp38-cp38-linux_x86_64.whl  pyproject.toml  requirements.txt  riskapi.py  routes.py  sandbox.py  sandboxpy.py  sftp_utils.py  sql.py  sql_postgres.py  temp_mock_known_hosts  volSurfaceUI.py
apps/: app2.py  brokers.py  bullitenBoard.py  calculator.py  calculator2.py  calculator_old.py  dataLoad.py  deltaVolas.py  expiry.py  homepage.py  logPage.py  oldcalculator.py  pnl.py  portfolio.py  position.py  promptCurve.py  rates.py  rec.py  riskMatrix.py  routeStatus.py  settings.py  staticData.py  strikeRisk.py  trades.py  volMatrix.py  whiteBoard.py
assets/js/: BS.js
dependencies/: upedata-0.1.0-py3-none-any.whl  upedata-0.5.3-py3-none-any.whl  upedata-0.6.1-py3-none-any.whl  upedata-0.6.2-py3-none-any.whl  upestatic-0.0.1.4-py3-none-any.whl  upestatic-0.0.1.4.1-py3-none-any.whl  upestatic-0.0.1.4.2.2-py3-none-any.whl  upestatic-0.0.1.4.3-py3-none-any.whl  upestatic-0.0.1.4.4-py3-none-any.whl  upestatic-0.0.1.4.5-py3-none-any.whl  upestatic-0.0.1.4.6-py3-none-any.whl  upestatic-0.3.3-py3-none-any.whl  upestatic-0.3.7.dev3+gf00800d-py3-none-any.whl  upestatic-0.3.7.dev3+gf00800d.d20231204-py3-none-any.whl
skipped_tests/: test_cashManager.py  test_dataDownload.py  test_data_connections.py  test_sftp_utils.py  test_sql.py
src/: LMEvolSurface.py  TradeClass.py  app.py  baseLog.py  calculators.py  company_styling.py  data_connections.py  display_names.py  email_utils.py  index.py  int_app.py  known_hosts  overnightRec.py  parts.py  pnl_utils.py  riskapi.py  routes.py  sandbox.py  sftp_utils.py  sql.py  sql_postgres.py  sql_utils.py  volSurfaceUI.py
src/apps/: brokers.py  bullitenBoard.py  calculator.py  calculator2.py  calculatorEUR.py  calculator_old.py  calendarPage.py  cashManager.py  cashManager2.py  dataDownload.py  dataLoad.py  deltaVolas.py  expiry.py  homepage.py  lme_carry.py  logPage.py  m2m_rec.py  oldStaticData.py  pnl.py  portfolio.py  position.py  promptCurve.py  rates.py  rec.py  riskMatrix.py  routeStatus.py  settings.py  staticData.py  strikeRisk.py  strikeRiskNew.py  trades.py  volMatrix.py  volMatrix_delta.py  vol_matrix_new.py  whiteBoard.py
src/assets/: style.css
src/assets/js/: BS-EU.js  BS.js
src/templates/: base.html  tradeSheet.html
src/tests/: test_app.py  test_data_connections.py  test_sftp_utils.py
templates/: calculatorForm.html  fixmlFuture.xml  fixmlOption.xml
tests/: pytest.ini  test_app.py  test_dataLoad.py  test_data_connections.py  test_display_names.py  test_parts.py  test_pnl_utils.py
tests/test_assets/: TodaysVolatility_09May23.csv  TodaysVolatility_12May23.csv  TodaysVolatility_18Aug23.csv  TodaysVolatility_18Oct23.csv  TodaysVolatility_19May23.csv  TodaysVolatility_19Oct23.csv  UPETRADING_csvnpos_npos_20231020.csv  export_positions_cme_20231023-0015.csv
