[tool.poetry]
name = "frontend"
version = "3.7.0"
description = "georgia frontend"
authors = ["marcelo amorelli <marcelo.amorelli@upetrading.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.15"
dash = "2.8.*"
numpy = "1.21.1"
pandas = "1.3.0"
flask_sqlalchemy = "2.5.1"
sqlalchemy = "1.4.47"
scipy = "*"
redis = "4.3.3"
dash-bootstrap-components = "1.1.0"
flask = "2.1.2"
dash_daq = "0.5.0"
plotly = "5.8.2"
colorlover = "0.3.0"
requests = "2.28.0"
pytz = "2021.1"
orjson = "*"
paramiko = "2.11.0"
jinja2 = "*"
python-dotenv = "*"
#psycopg2 = "*"
# psycopg2-binary = "2.9.5"
ujson = "*"
"backports.zoneinfo" = "0.2.1"
upestatic = { path = "dependencies/upestatic-0.0.1.4.6-py3-none-any.whl" }
werkzeug = "2.2.2"
python-dateutil = "*"
gunicorn = "^20"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
coverage = "^7.3.2"
pytest-xdist = "^3.3.1"
icecream = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# when sqlalchemy goes to 2.0, psycopg2 needs be replaced with psycog v3.0
